SERVER-13050 Don't send "cursor" to shards when doing agg explain

Follow up to SERVER-12760. If cursor is sent to the shards, the explain will
fail for the wrong reason and we would give a worse error message. With this
change we now correctly report that the explain failed because one of the
shards doesn't support explain.